--- a/WebDeveloper/Views/Shared/_Layout.cshtml
+++ b/WebDeveloper/Views/Shared/_Layout.cshtml
@@ -1,11 +1,13 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mi Aplicación HTML5</title>
     @Scripts.Render("~/bundles/jquery")    
     @Scripts.Render("~/bundles/modernizr")  
     @Styles.Render("~/Content/css")
+    <script src="~/Scripts/jquery-ui-1.11.4.js" type="text/javascript"></script>
+    <script src="~/Scripts/custom/ajax.js" type="text/javascript"></script>
 </head>
 <body>
     <header>
@@ -30,9 +32,13 @@
     <section class="container body-content">
         @RenderBody()
     </section>
+    <section>
+        <button onclick="getResource('/WebDeveloper/Personal/EmailList/1')">Test Button</button>
+    </section>
     @*<footer>
         &copy; @DateTime.Now.Year - Todos los derechos reservados al autor.
     </footer>*@
+    <div id="divDialog" style="background-color: aqua;"></div>
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
