--- a/WebDeveloper/Views/Shared/_Layout.cshtml
+++ b/WebDeveloper/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     @Scripts.Render("~/bundles/jquery")    
     @Scripts.Render("~/bundles/modernizr")  
     @Styles.Render("~/Content/css")
+    <script src="~/js/modal.js" type="text/javascript"></script>
 </head>
 <body>
     <header>
@@ -29,7 +30,7 @@
     </header>
     <section class="container body-content">
         @RenderBody()
-    </section>
+    </section>    
     @*<footer>
         &copy; @DateTime.Now.Year - Todos los derechos reservados al autor.
     </footer>*@
