--- a/WebDeveloper/Css/site.css
+++ b/WebDeveloper/Css/site.css
@@ -21,3 +21,67 @@ section {
 .body-content {
   display: block; }
 
+/*.modal-content {
+    width: 600px !important;
+    margin: 30px auto !important;
+    background-color: $site-color-white;
+}
+
+.modal-dialog {
+    left: 50%;
+    right: auto;
+    width: 624px;
+}
+@media screen and (min-width: 768px) { 
+  .modal-dialog:before {
+    display: inline-block;
+    vertical-align: middle;
+    content: " ";
+    height: 100%;
+  }
+}
+
+.modal-dialog {
+  display: inline-block;
+  text-align: left;
+  vertical-align: middle;
+}
+
+
+
+.modal {
+  text-align: center;
+  padding: 0!important;
+}
+
+.modal:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-right: -4px;
+}
+
+.modal-dialog {
+  display: inline-block;
+  text-align: left;
+  vertical-align: middle;
+}*/
+.vertical-alignment-helper {
+  display: table;
+  height: 100%;
+  width: 100%; }
+
+.vertical-align-center {
+  /* To center vertically */
+  display: table-cell;
+  vertical-align: middle; }
+
+.modal-content {
+  background-color: #fff;
+  /* Bootstrap sets the size of the modal in the modal-dialog class, we need to inherit it */
+  width: inherit;
+  height: inherit;
+  /* To center horizontally */
+  margin: 0 auto; }
+
