--- a/WebDeveloper/Areas/Person/Views/Person/Index.cshtml
+++ b/WebDeveloper/Areas/Person/Views/Person/Index.cshtml
@@ -55,7 +55,7 @@
                     HttpMethod = "GET"
                 }
             )*@
-            <a href="#" onclick="getModal('/Personal/EmailList/@item.BusinessEntityID');return false;">View Emails</a>            
+            <a href="#" onclick="getModal('Personal/EmailList/@item.BusinessEntityID');return false;">View Emails</a>            
         </td>
     </tr>
 }
