--- a/WebDeveloper/scss/base/_site.scss
+++ b/WebDeveloper/scss/base/_site.scss
@@ -87,9 +87,5 @@ section{
 }
 .modal-content {    
     background-color: $site-color-white;
-    /* Bootstrap sets the size of the modal in the modal-dialog class, we need to inherit it */
-    width:inherit;
-    height:inherit;
-    /* To center horizontally */
-    margin: 0 auto;
+    margin-top: 20%;
 }
