--- a/WebDeveloper/Areas/Personal/Views/Personal/Index.cshtml
+++ b/WebDeveloper/Areas/Personal/Views/Personal/Index.cshtml
@@ -7,9 +7,16 @@
 
 <h2>Index</h2>
 
-<p>
+@*<p>
     @Html.ActionLink("Create New", "Create")
+</p>*@
+
+<p>
+    <a href="#" class="btn btn-success btn-sm" onclick="getModal('Personal/Create');return false;">
+        <span class="glyphicon glyphicon-plus"></span> Create New
+    </a>
 </p>
+
 <table class="table">
     <tr>
         <th>
@@ -42,10 +49,22 @@
             @Html.DisplayFor(modelItem => item.ModifiedDate)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new {id = item.BusinessEntityID}) |
+            @*@Html.ActionLink("Edit", "Edit", new {id = item.BusinessEntityID}) |
             @Html.ActionLink("Details", "Details", new {id = item.BusinessEntityID}) |
-            @Html.ActionLink("Delete", "Delete", new {id = item.BusinessEntityID}) |
-            @Ajax.ActionLink(
+            @Html.ActionLink("Delete", "Delete", new {id = item.BusinessEntityID}) |*@
+            <a href="#" class="btn btn-success btn-sm">
+                <span class="glyphicon glyphicon-edit"></span> Edit
+            </a>
+            <a href="#" class="btn btn-success btn-sm">
+                <span class="glyphicon glyphicon-list"></span> Details
+            </a>
+            <a href="#" class="btn btn-danger btn-sm">
+                <span class="glyphicon glyphicon-remove"></span> Delete
+            </a>
+            <a href="#" class="btn btn-success btn-sm" onclick="getModal('Personal/EmailList')">
+                <span class="glyphicon glyphicon-inbox"></span> Emails
+            </a>
+            @*@Ajax.ActionLink(
                 "View Emails",
                 "EmailList",
                 new {id=item.BusinessEntityID },
@@ -55,7 +74,7 @@
                     UpdateTargetId = "emailList",
                     HttpMethod = "GET"
                 }
-            )
+            )*@
         </td>
     </tr>
 }
