Agregar Nuevo Usuario, creacion de New Entity

--- a/WebDeveloper/Areas/Personal/Views/Personal/Index.cshtml
+++ b/WebDeveloper/Areas/Personal/Views/Personal/Index.cshtml
@@ -6,8 +6,13 @@
 
 <h2>Index</h2>
 
-<p>
+@*<p>
     @Html.ActionLink("Create New", "Create")
+</p>*@
+<p>
+    <a href="#" class="btn btn-success btn-sm" onclick="getModal('Personal/Create');return false;">
+        <span class="glyphicon glyphicon-plus"></span> Create New
+    </a>
 </p>
 <table class="table">
     <tr>
@@ -41,9 +46,21 @@
             @Html.DisplayFor(modelItem => item.ModifiedDate)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new {id = item.BusinessEntityID}) |
+            @*@Html.ActionLink("Edit", "Edit", new {id = item.BusinessEntityID}) |
             @Html.ActionLink("Details", "Details", new {id = item.BusinessEntityID}) |
-            @Html.ActionLink("Delete", "Delete", new {id = item.BusinessEntityID}) |
+            @Html.ActionLink("Delete", "Delete", new {id = item.BusinessEntityID}) |*@
+            <a href="#" class="btn btn-success btn-sm">
+                <span class="glyphicon glyphicon-edit"></span> Edit
+            </a>
+            <a href="#" class="btn btn-success btn-sm">
+                <span class="glyphicon glyphicon-list"></span> Details
+            </a>
+            <a href="#" class="btn btn-danger btn-sm">
+                <span class="glyphicon glyphicon-remove"></span> Delete
+            </a>
+            <a href="#" class="btn btn-success btn-sm" onclick="getModal('Personal/EmailList/@item.BusinessEntityID');return false;">
+                <span class="glyphicon glyphicon-inbox"></span> Emails
+            </a>
             @*@Ajax.ActionLink(
                 "View Emails",
                 "EmailList",
@@ -55,7 +72,7 @@
                     HttpMethod = "GET"
                 }
             )*@
-            <a href="#" onclick="getModal('Personal/EmailList/@item.BusinessEntityID');return false;">View Emails</a>            
+            @*<a href="#" onclick="getModal('Personal/EmailList/@item.BusinessEntityID');return false;">View Emails</a>*@            
         </td>
     </tr>
 }
