--- a/WebDeveloper/scss/base/_site.scss
+++ b/WebDeveloper/scss/base/_site.scss
@@ -25,3 +25,67 @@ section{
 .body-content{
     display: block;
 }
+
+/*.modal-content {
+    width: 600px !important;
+    margin: 30px auto !important;
+    background-color: $site-color-white;
+}
+
+.modal-dialog {
+    left: 50%;
+    right: auto;
+    width: 624px;
+}
+@media screen and (min-width: 768px) { 
+  .modal-dialog:before {
+    display: inline-block;
+    vertical-align: middle;
+    content: " ";
+    height: 100%;
+  }
+}
+
+.modal-dialog {
+  display: inline-block;
+  text-align: left;
+  vertical-align: middle;
+}
+
+
+
+.modal {
+  text-align: center;
+  padding: 0!important;
+}
+
+.modal:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-right: -4px;
+}
+
+.modal-dialog {
+  display: inline-block;
+  text-align: left;
+  vertical-align: middle;
+}*/
+
+.modal {
+}
+.vertical-alignment-helper {
+    display:table;
+    height: 100%;
+    width: 100%;
+}
+.vertical-align-center {
+    /* To center vertically */
+    display: table-cell;
+    vertical-align: middle;
+}
+.modal-content {    
+    background-color: $site-color-white;
+    margin-top: 5%;
+}
