--- a/WebDeveloper/Areas/Personal/Views/Personal/_Edit.cshtml
+++ b/WebDeveloper/Areas/Personal/Views/Personal/_Edit.cshtml
@@ -1,20 +1,14 @@
 ﻿@model WebDeveloper.Model.Person
-
-@*@using (Ajax.BeginForm("Create", new { Controller = "Personal", Area = "Personal" },
-                new AjaxOptions
-                {
-                    HttpMethod = "Post",
-                    InsertionMode = InsertionMode.Replace,
-                    UpdateTargetId = "modal-body"
-                }))*@
 @using (Html.BeginForm())
-                {
+{
     @Html.AntiForgeryToken()
-
+    
     <div class="form-horizontal">
         <h4>Person</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.BusinessEntityID)
+
         <div class="form-group">
             @Html.LabelFor(model => model.PersonType, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -82,25 +76,8 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AdditionalContactInfo, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.AdditionalContactInfo, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AdditionalContactInfo, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Demographics, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Demographics, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Demographics, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-
-        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
@@ -113,4 +90,3 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
-
