--- a/WebDeveloper/Areas/Personal/Views/Personal/Index.cshtml
+++ b/WebDeveloper/Areas/Personal/Views/Personal/Index.cshtml
@@ -49,7 +49,7 @@
             @*@Html.ActionLink("Edit", "Edit", new {id = item.BusinessEntityID}) |
             @Html.ActionLink("Details", "Details", new {id = item.BusinessEntityID}) |
             @Html.ActionLink("Delete", "Delete", new {id = item.BusinessEntityID}) |*@
-            <a href="#" class="btn btn-success btn-sm">
+            <a href="#" class="btn btn-success btn-sm" onclick="getModal('Personal/Edit/@item.BusinessEntityID');return false;">
                 <span class="glyphicon glyphicon-edit"></span> Edit
             </a>
             <a href="#" class="btn btn-success btn-sm">
